<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>pl.lodz.p.it.ssbd2023</groupId>
    <artifactId>ssbd06</artifactId>
    <version>0.2.1</version>
    <packaging>war</packaging>

    <name>ssbd06</name>

    <developers>
        <developer>
            <name>Wiktor Pawlak</name>
            <id>236621</id>
        </developer>
        <developer>
            <name>Szymon Ziemecki</name>
            <id>236709</id>
        </developer>
        <developer>
            <name>Mateusz Strzelecki</name>
            <id>236665</id>
        </developer>
        <developer>
            <name>Szymon Zakrzewski</name>
            <id>236707</id>
        </developer>
        <developer>
            <name>Weronika Tutkaj</name>
            <id>236680</id>
        </developer>
        <developer>
            <name>Oskar Trela</name>
            <id>236677</id>
        </developer>
        <developer>
            <name>Piotr Skonieczny</name>
            <id>236649</id>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>
        <jakarta.jakartaee-api.version>10.0.0</jakarta.jakartaee-api.version>
        <junit.version>5.9.1</junit.version>
        <hibernate.version>6.1.7.Final</hibernate.version>
        <jersey.server.version>3.1.1</jersey.server.version>
        <hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
        <postgres.version>42.5.4</postgres.version>
        <lombok.version>1.18.26</lombok.version>
        <java-jwt.version>4.4.0</java-jwt.version>
        <mail-api.version>2.1.1</mail-api.version>
        <vavr.version>0.10.4</vavr.version>
        <testcontainers.version>1.17.6</testcontainers.version>
        <rest-assured.version>5.3.0</rest-assured.version>
        <bCryptVer>0.10.2</bCryptVer>
        <aqruillian.payara.server.managed.version>3.0.alpha8</aqruillian.payara.server.managed.version>
        <arquillian.junit5.container.version>1.7.0.Alpha14</arquillian.junit5.container.version>
        <shrinkwrap-resolver-impl-maven.version>3.1.4</shrinkwrap-resolver-impl-maven.version>
        <slf4j.version>2.0.7</slf4j.version>
        <h2.version>2.1.214</h2.version>
        <junit.version>5.9.2</junit.version>
        <mockito.version>5.3.1</mockito.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.platform</groupId>
            <artifactId>jakarta.jakartaee-api</artifactId>
            <version>${jakarta.jakartaee-api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-server</artifactId>
            <version>${jersey.server.version}</version>
        </dependency>

        <dependency>
            <groupId>jakarta.mail</groupId>
            <artifactId>jakarta.mail-api</artifactId>
            <version>${mail-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>${hibernate.version}</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgres.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>${hibernate-validator.version}</version>
        </dependency>
        <dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
            <version>${java-jwt.version}</version>
        </dependency>
        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>${vavr.version}</version>
        </dependency>
        <dependency>
            <groupId>at.favre.lib</groupId>
            <artifactId>bcrypt</artifactId>
            <version>${bCryptVer}</version>
        </dependency>

        <!--    arqullian-->
        <dependency>
            <groupId>fish.payara.arquillian</groupId>
            <artifactId>arquillian-payara-server-managed</artifactId>
            <version>${aqruillian.payara.server.managed.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit5</groupId>
            <artifactId>arquillian-junit5-container</artifactId>
            <version>${arquillian.junit5.container.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
            <version>${shrinkwrap-resolver-impl-maven.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2.version}</version>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${rest-assured.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.3.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <configuration>
                            <configLocation>src/main/resources/checkstyle/checkstyle.xml</configLocation>
                            <consoleOutput>true</consoleOutput>
                            <violationSeverity>info</violationSeverity>
                            <failOnViolation>true</failOnViolation>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <systemPropertyVariables>
                        <payara.home>${env.PAYARA_HOME}</payara.home>
                    </systemPropertyVariables>
                    <skip>false</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>